doc(transaction): create controller service and model

--- a/TransactionBroadcastAPI/TransactionBroadcastAPI/TransactionBroadcastAPI.csproj
+++ b/TransactionBroadcastAPI/TransactionBroadcastAPI/TransactionBroadcastAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="TransactionClient.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
